--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ OÙ LE MONDE SAVANT ET LE MONDE IGNORANT SONT AUSSI EMBARRASSES L'UN OU L'AUTRE.
 
 " PAN !... PAN !... "
 
-Les deux coups de pistolet partirent presque en même temps. Une vache, qui paissait à cinquante pas de là, reçut une des balles dans l'échine. Elle n'était pour rien dans l'affaire, cependant.
-Ni l'un ni l'autre des deux adversaires n'avait été touché. 
+<p>Les deux coups de pistolet partirent presque en même temps. Une vache, qui paissait à cinquante pas de là, reçut une des balles dans l'échine. Elle n'était pour rien dans l'affaire, cependant.
+Ni l'un ni l'autre des deux adversaires n'avait été touché. </p>
 
 Quels étaient ces deux gentlemen? On ne sait, et, cependant, c'eût été là, sans doute, l'occasion de faire parvenir leurs noms à la postérité. Tout ce qu'on peut dire, c'est que le plus âgé était Anglais, le plus jeune Américain. Quant à indiquer en quel endroit l'inoffensif ruminant venait de paître sa dernière touffe d'herbe, rien de plus facile. C'était sur la rive droite du Niagara, non loin de ce pont suspendu qui réunit la rive américaine à la rive canadienne, trois milles au-dessous des chutes.
 L'Anglais s'avança alors vers l'Américain :
