--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <h1>Jules Verne</h1>
 
-ROBUR LE CONQUÉRANT
+<h2>ROBUR LE CONQUÉRANT</h2>
 
-I
+<h3>I</h3>
 
-OÙ LE MONDE SAVANT ET LE MONDE IGNORANT SONT AUSSI EMBARRASSES L'UN OU L'AUTRE.
+<hr />
 
-" PAN !... PAN !... "
+<p>OÙ LE MONDE SAVANT ET LE MONDE IGNORANT SONT AUSSI EMBARRASSES L'UN OU L'AUTRE.
+" PAN !... PAN !... "</p>
 
-<p>Les deux coups de pistolet partirent presque en même temps. Une vache, qui paissait à cinquante pas de là, reçut une des balles dans l'échine. Elle n'était pour rien dans l'affaire, cependant.
-Ni l'un ni l'autre des deux adversaires n'avait été touché. </p>
+<p>
+Les deux coups de pistolet partirent presque en même temps. Une vache, qui paissait à cinquante pas de là, reçut une des balles dans l'échine. Elle n'était pour rien dans l'affaire, cependant.<br />
+Ni l'un ni l'autre des deux adversaires n'avait été touché. 
+</p>
 
-<p>Quels étaient ces deux gentlemen? On ne sait, et, cependant, c'eût été là, sans doute, l'occasion de faire parvenir leurs noms à la postérité. Tout ce qu'on peut dire, c'est que le plus âgé était Anglais, le plus jeune Américain. Quant à indiquer en quel endroit l'inoffensif ruminant venait de paître sa dernière touffe d'herbe, rien de plus facile. C'était sur la rive droite du Niagara, non loin de ce pont suspendu qui réunit la rive américaine à la rive canadienne, trois milles au-dessous des chutes.
-L'Anglais s'avança alors vers l'Américain :
+<p>
+Quels étaient ces deux gentlemen? On ne sait, et, cependant, c'eût été là, sans doute, l'occasion de faire parvenir leurs noms à la postérité. Tout ce qu'on peut dire, c'est que le plus âgé était Anglais, le plus jeune Américain. Quant à indiquer en quel endroit l'inoffensif ruminant venait de paître sa dernière touffe d'herbe, rien de plus facile. C'était sur la rive droite du Niagara, non loin de ce pont suspendu qui réunit la rive américaine à la rive canadienne, trois milles au-dessous des chutes.<br />
+L'Anglais s'avança alors vers l'Américain :<br />
+" Je n en soutiens pas moins que c'était le Rule Britannia! dit-il.<br />
+-- Non! le Yankee Doodle! " répliqua l'autre.
+</p>
 
-" Je n en soutiens pas moins que c'était le Rule Britannia! dit-il.
-
--- Non! le Yankee Doodle! " répliqua l'autre.</p>
-
-La querelle allait recommencer, lorsque l'un des témoins -- sans doute dans l'intérêt du bétail -- s'interposa, disant :
-
-" Mettons que c'était le Rule Doodle et le Yankee Britannia, et allons déjeuner! "
-
-Ce compromis entre les deux chants nationaux de l'Amérique et de la Grande-Bretagne fut adopté à la satisfaction générale. Américains et Anglais, remontant la rive gauche du Niagara, vinrent s'attabler dans l'hôtel de Goat-Island -- un terrain neutre entre les deux chutes. Comme ils sont en présence des oeufs bouillis et du jambon traditionnels, du roastbeef froid, relevé de pickles incendiaires, et de flots de thé à rendre jalouses les célèbres cataractes, on ne les dérangera plus. Il est peu probable, d'ailleurs, qu'il soit encore question d'eux dans cette histoire.
-
-Qui avait raison de l'Anglais ou de l'Américain? Il eût été difficile de se prononcer. En tout cas, ce duel montre combien les esprits s'étaient passionnés, non seulement dans le nouveau, mais aussi dans l'ancien continent, à propos d'un phénomène inexplicable, qui, depuis un mois environ, mettait toutes les cervelles à l'envers.
-
+<p>
+La querelle allait recommencer, lorsque l'un des témoins -- sans doute dans l'intérêt du bétail -- s'interposa, disant :<br />
+" Mettons que c'était le Rule Doodle et le Yankee Britannia, et allons déjeuner! "<br />
+Ce compromis entre les deux chants nationaux de l'Amérique et de la Grande-Bretagne fut adopté à la satisfaction générale. Américains et Anglais, remontant la rive gauche du Niagara, vinrent s'attabler dans l'hôtel de Goat-Island -- un terrain neutre entre les deux chutes. Comme ils sont en présence des oeufs bouillis et du jambon traditionnels, du roastbeef froid, relevé de pickles incendiaires, et de flots de thé à rendre jalouses les célèbres cataractes, on ne les dérangera plus. Il est peu probable, d'ailleurs, qu'il soit encore question d'eux dans cette histoire.<br />
+Qui avait raison de l'Anglais ou de l'Américain? Il eût été difficile de se prononcer. En tout cas, ce duel montre combien les esprits s'étaient passionnés, non seulement dans le nouveau, mais aussi dans l'ancien continent, à propos d'un phénomène inexplicable, qui, depuis un mois environ, mettait toutes les cervelles à l'envers.<br />
 _Os sublime dedit coelumque tueri,_ 
-
+</p>
 
 a dit Ovide pour le plus grand honneur de la créature humaine. En vérité, jamais on n'avait tant regardé le ciel depuis l'apparition de l'homme sur le globe terrestre.
 
