--- a/listes.html
+++ b/listes.html
@@ -9,7 +9,7 @@
 <body>
   <h1> A faire avant 2025</h1>
   <p> 7 films comiques à regarder avant 2025</p>
-  <ol type="A">
+  <ol type="A" reversed="1">
     <li>Bruce Tout-Puissant</li>
      <li>Les dieux sont tombés sur la tête</li>
      <li>Qu'est-ce qu'on a fait au bon Dieu?</li>
@@ -45,7 +45,7 @@
      <li>Les flingueuses</li>
      <li>Fausses blondes infiltrées</li>
   </ol>
-  <ol type="1">
+  <ol type="1" start="5">
     <li>Bruce Tout-Puissant</li>
      <li>Les dieux sont tombés sur la tête</li>
      <li>Qu'est-ce qu'on a fait au bon Dieu?</li>
