--- a/tabelau.html
+++ b/tabelau.html
@@ -8,15 +8,15 @@
     <body>  
      <caption>Essai de tableau</caption>
      <table>
-        <th>
-            <td>Nom</td>
-            <td>Prénom</td>
-            <td>adresse</td>
-            <td>CP</td>
-            <td>Ville</td>
-            <td>Téléphone</td>
-            <td>Email</td>
-        </th>
+        <tr>
+            <th>Nom</th>
+            <th>Prénom</th>
+            <th>adresse</th>
+            <th>CP</th>
+            <th>Ville</th>
+            <th>Téléphone</th>
+            <th>Email</th>
+        </tr>
         <tr>
           <td>Giraud</td>
           <td>Pierre</td>
