--- a/formulaire.html
+++ b/formulaire.html
@@ -10,16 +10,16 @@
       <p>Merci de bien vouloir remplir le formulaire ci-dessus</p>
       
       <form>
-      <label for="">Nom*</label> <input>
-      <label for="">Prénom*</label> <input>
-      <label for="">Adresse</label> <input>
-      <label for="">CP</label> <input>
-      <label for="">Ville</label> <input>
-      <label for="">Email*</label> <input>
-      <label for="">Sujets*</label> <input>
-      <label for="">Champs libre</label> <input>
+      <label for="lastname">Nom*</label> <input type="text" name="lastname">
+      <label for="firstname">Prénom*</label> <input type="text" name="firstname">
+      <label for="adress">Adresse</label> <input type="text" name="adress">
+      <label for="zipcode">CP</label> <input type="text" name="zipcode">
+      <label for="town">Ville</label> <input type="text" name="town">
+      <label for="email">Email*</label> <input type="text" name="email">
+      <label for="">Sujets*</label> 
+      <label for="">Champs libre</label> 
       
-      envoyer <input>
+      envoyer <input type="submit">
       </form>
     </body>
 </html>
