--- a/formulaire.html
+++ b/formulaire.html
@@ -10,16 +10,16 @@
       <p>Merci de bien vouloir remplir le formulaire ci-dessus</p>
       
       <form>
-      <label for="lastname">Nom*</label> <input type="text" name="lastname">
-      <label for="firstname">Prénom*</label> <input type="text" name="firstname">
-      <label for="adress">Adresse</label> <input type="text" name="adress">
-      <label for="zipcode">CP</label> <input type="text" name="zipcode">
-      <label for="town">Ville</label> <input type="text" name="town">
-      <label for="email">Email*</label> <input type="text" name="email">
-      <label for="">Sujets*</label> 
-      <label for="">Champs libre</label> 
+      <label for="lastname">Nom*</label> <input type="text" name="lastname"><br />
+      <label for="firstname">Prénom*</label> <input type="text" name="firstname"><br />
+      <label for="adress">Adresse</label> <input type="text" name="adress"><br />
+      <label for="zipcode">CP</label> <input type="text" name="zipcode"><br />
+      <label for="town">Ville</label> <input type="text" name="town"><br />
+      <label for="email">Email*</label> <input type="text" name="email"><br />
+      <label for="">Sujets*</label> <br />
+      <label for="">Champs libre</label> <br />
       
-      envoyer <input type="submit">
+      <input type="submit" value="submit">
       </form>
     </body>
 </html>
