--- a/formulaire.html
+++ b/formulaire.html
@@ -9,15 +9,15 @@
 
       <p>Merci de bien vouloir remplir le formulaire ci-dessus</p>
       
-      <form>
-      <label for="lastname">Nom*</label> <input type="text" name="lastname"><br />
-      <label for="firstname">Prénom*</label> <input type="text" name="firstname"><br />
+      <form method="post" action="index.html">
+      <label for="lastname">Nom*</label> <input type="text" name="lastname" required><br />
+      <label for="firstname">Prénom*</label> <input type="text" name="firstname" required><br />
       <label for="adress">Adresse</label> <input type="text" name="adress"><br />
       <label for="zipcode">CP</label> <input type="text" name="zipcode"><br />
       <label for="town">Ville</label> <input type="text" name="town"><br />
-      <label for="email">Email*</label> <input type="text" name="email"><br />
+      <label for="email">Email*</label> <input type="text" name="email" required><br />
       <label for="">Sujets*</label> <br />
-      <label for="">Champs libre</label> <br />
+      <label for="">Champs libre*</label> <br />
       
       <input type="submit" value="submit">
       </form>
