--- a/formulaire.html
+++ b/formulaire.html
@@ -16,8 +16,16 @@
       <label for="zipcode">CP</label> <input type="text" name="zipcode"><br />
       <label for="town">Ville</label> <input type="text" name="town"><br />
       <label for="email">Email*</label> <input type="text" name="email" required><br />
-      <label for="">Sujets*</label> <br />
-      <label for="">Champs libre*</label> <br />
+      <label for="subject">Sujets*</label> 
+          <select name="subject">
+               <option value="complaint">plainte</option>
+               <option value="price">problème de prix</option>
+               <option value="general" selected>question générale</option>
+               <option value="other">autre</option>
+          </select>
+      <br />
+      <label for="">Champs libre*</label> 
+      <br />
       
       <input type="submit" value="submit">
       </form>
