--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Les deux coups de pistolet partirent presque en même temps. Une vache, qui pais
 Ni l'un ni l'autre des deux adversaires n'avait été touché. 
 </p>
 
-<p>
+<p style="font-family: cursive; font-color:red; font-size:3em;">
 Quels étaient ces deux gentlemen? On ne sait, et, cependant, c'eût été là, sans doute, l'occasion de faire parvenir leurs noms à la postérité. Tout ce qu'on peut dire, c'est que le plus âgé était Anglais, le plus jeune Américain. Quant à indiquer en quel endroit l'inoffensif ruminant venait de paître sa dernière touffe d'herbe, rien de plus facile. C'était sur la rive droite du Niagara, non loin de ce pont suspendu qui réunit la rive américaine à la rive canadienne, trois milles au-dessous des chutes.<br />
 L'Anglais s'avança alors vers l'Américain :<br />
 " Je n en soutiens pas moins que c'était le Rule Britannia! dit-il.<br />
