--- a/listes.html
+++ b/listes.html
@@ -4,9 +4,14 @@
   <head>
     <metacharset="utf-8">
     <title>Listes</title>
-   
+   <style>
+     article font-color: red;
+   </style>
   </head>
 <body>
+  <article>
+  tralala
+  </article>
   <h1> A faire avant 2025</h1>
   <p> 7 films comiques à regarder avant 2025</p>
   <ol type="A" reversed="1">
