--- a/listes.html
+++ b/listes.html
@@ -5,7 +5,7 @@
     <metacharset="utf-8">
     <title>Listes</title>
    <style>
-     article font-color: red;
+     article color: red;
    </style>
   </head>
 <body>
