--- a/listes.html
+++ b/listes.html
@@ -5,7 +5,10 @@
     <metacharset="utf-8">
     <title>Listes</title>
    <style>
-     article color: red;
+     article
+     {
+       color: red;
+     }
    </style>
   </head>
 <body>
