--- a/main.html
+++ b/main.html
@@ -5,14 +5,15 @@
     <title>homepage</title>
     <metacharset="utf-8">
   </head>
+
     <body>
-      <head>
+      <header>
         <ul>
           <li><a href=""></a></li>
           <li><a href=""></a></li>
           <li><a href=""></a></li>
         </ul>
-      </head>
+      </header>
       
       <nav>
         <ul>
