--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
   <head>
     <title>homepage</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="premier.css">
   </head>
 
     <body>
