--- a/main.html
+++ b/main.html
@@ -18,9 +18,9 @@
       
       <nav>
         <ul>
-          <li><a href="">Lorem ipsum dolor sit amet</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet</a></li>
+          <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
+          <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
+          <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
         </ul>
       </nav>
       
