--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
       
       <nav>
         <ul>
-          <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
+          <li class="vert"><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
           <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
           <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
         </ul>
@@ -49,7 +49,7 @@
         <ul>
           <li><a href="">Lorem ipsum dolor sit amet</a></li>
           <li><a href="">Lorem ipsum dolor sit amet</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet</a></li>
+          <li><a href="" class="vert">Lorem ipsum dolor sit amet</a></li>
         </ul>
       </footer>
     </body>
