--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="premier.css">
   </head>
-
+  <!-- ici je mets un commentaire -->
     <body>
       <header>
         <ul>
