--- a/main.html
+++ b/main.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="premier.css">
   </head>
-  <!-- ici je mets un commentaire -->
+  <!-- 
+    17/11/2021 - finir le fichier HTML
+  -->
     <body>
       <header>
         <ul>
