--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
       
       <nav>
         <ul>
-          <li class="vert"><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
+          <li><a href="" class="navigation vert">Lorem ipsum dolor sit amet</a></li>
           <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
           <li><a href="" class="navigation">Lorem ipsum dolor sit amet</a></li>
         </ul>
