--- a/main.html
+++ b/main.html
@@ -30,10 +30,12 @@
         <article id="premier">
           <h2>Lorem ipsum dolor sit amet</h2>
           <p>
+            <div class="image">
+              <img style="width:100%;" src="https://cdn.futura-sciences.com/buildsv6/images/wide1920/1/8/2/182c0cf196_50167185_proprietaire-chat-min.jpg"><br />
+              <a href="">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</a>              
+            </div>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
           </p>
-          <a href="">Lorem ipsum dolor sit amet</a><br />
-          <img width="500" src="https://cdn.futura-sciences.com/buildsv6/images/wide1920/1/8/2/182c0cf196_50167185_proprietaire-chat-min.jpg">
         </article>
 
         <article>
@@ -41,8 +43,7 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
           </p>
-          <a href="">Lorem ipsum dolor sit amet</a><br />
-          <img width="500" src="https://cdn.futura-sciences.com/buildsv6/images/wide1920/1/8/2/182c0cf196_50167185_proprietaire-chat-min.jpg">
+x          <a href="">Lorem ipsum dolor sit amet</a><br />
         </article>
       </section>
       
